--- a/BCS/login.phtml
+++ b/BCS/login.phtml
@@ -12,6 +12,7 @@
 <a href="register/register.php">register</a>
  <p>yo</p>
 <p>login</p>
+<form action="login.php" method="post"></form>
 
 
 </body>
