--- a/BCS/login.phtml
+++ b/BCS/login.phtml
@@ -10,7 +10,10 @@
 
 <body>
 <a href="register/register.php">register</a>
-
+<p> tets messasge</p>
+<form>
+    <p>Username</p>
+</form>
 </body>
 </html>
 
