--- a/BCS-MVC/Views/template/header.phtml
+++ b/BCS-MVC/Views/template/header.phtml
@@ -50,7 +50,7 @@ $user_email = $_SESSION['email'] ?? '';
                 <?php endif; ?>
                 <?php if ($is_logged_in && $user_role === 'employer'): ?>
                     <li class="nav-item">
-                        <a class="nav-link" href="posts.php">My Posts</a>
+                        <a class="nav-link" href="my_posts.php">My Posts</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="add_post.php">Create Post</a>
