--- a/BCS-MVC/Views/my_posts.phtml
+++ b/BCS-MVC/Views/my_posts.phtml
@@ -48,13 +48,36 @@
                             <p class="card-text"><b>end date:</b> <?php echo $placementsData->getEndDate()?></p>
                         </div>
                         <div class="card-footer">
+                            <!-- delete specific card  -->
+                            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal<?php echo $placementsData->getPlacementID(); ?>">
+                                Delete Draft
+                            </button>
                         </div>
                     </div>
                 </div>
             </div>
 
+            <!-- Conformation Modal to make sure delete is needed  -->
+            <div class="modal fade" id="deleteModal<?php echo $placementsData->getPlacementID(); ?>" tabindex="-1" role="dialog">
+                <div class="modal-dialog">
+                    <form action="my_posts.php" method="POST" class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Delete Placement </h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Are you sure you want to delete this placement</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-danger" name="delete_placement" value="<?php echo $placementsData->getPlacementID()?>">Delete</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         <?php } ?>
     </div>
 <?php endif; ?>
+
 
 <?php require('template/footer.phtml') ?>
