--- a/BCS-MVC/Views/my_posts.phtml
+++ b/BCS-MVC/Views/my_posts.phtml
@@ -42,7 +42,7 @@
                     </div>
                     <?php //echo 'images/' .  htmlspecialchars($placementsData->getPhotoUrl())?><div class="col-md-8">
                         <div class="card-body">
-                            <p class="card-text"><b>salary:</b> <?php echo $placementsData->getSalary()?></p>
+                            <p class="card-text"><b>salary: £</b> <?php echo $placementsData->getSalary()?></p>
                             <p class="card-text"><b>location:</b> <?php echo $placementsData->getLocation()?></p>
                             <p class="card-text"><b>start date:</b> <?php echo $placementsData->getStartDate()?></p>
                             <p class="card-text"><b>end date:</b> <?php echo $placementsData->getEndDate()?></p>
