--- a/BCS-MVC/Views/template/header.phtml
+++ b/BCS-MVC/Views/template/header.phtml
@@ -46,6 +46,9 @@ $user_email = $_SESSION['email'] ?? '';
                     <li class="nav-item">
                         <a class="nav-link" href="student_profile.php">My Profile</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="studentMatches.php">Matches</a>
+                    </li>
 
                 <?php endif; ?>
                 <?php if ($is_logged_in && $user_role === 'employer'): ?>
