--- a/BCS-MVC/Views/login.phtml
+++ b/BCS-MVC/Views/login.phtml
@@ -43,8 +43,10 @@
                         <label for="password" class="form-label">Password</label>
                         <input type="password" class="form-control" id="password" name="password" required>
                     </div>
+                    <div class="g-recaptcha mb-3" data-sitekey="<?php echo RECAPTCHA_SITE_KEY; ?>"></div>
                     <button type="submit" class="btn btn-primary btn-lg w-100">Login</button>
                 </form>
+                <script src="https://www.google.com/recaptcha/api.js" async defer></script>
                 <p class="text-center">New user? <a href="register.php">Create account</a></p>
 
             <?php
