--- a/BCS-MVC/Views/register.phtml
+++ b/BCS-MVC/Views/register.phtml
@@ -78,7 +78,9 @@
                     </div>
                 </div>
 
+                <div class="g-recaptcha mb-3" data-sitekey="<?php echo RECAPTCHA_SITE_KEY; ?>"></div>
                 <button type="submit" class="btn btn-success btn-lg w-100 mt-3">Register Account</button>
+                <script src="https://www.google.com/recaptcha/api.js" async defer></script>
                 <p class="text-center mt-3">Already have an account? <a href="login.php">Sign In</a></p>
             </form>
         </div>
