--- a/BCS-MVC/Views/add_post.phtml
+++ b/BCS-MVC/Views/add_post.phtml
@@ -17,7 +17,7 @@
 
         <br>
         <div class="form-floating mb-3">
-            <h6>Company Name</h6>
+            <h6>Job Title</h6>
             <input type="text" class="form-control" id="floatingTitle" name="title" required
                    value="<?php echo htmlspecialchars($view->formData['title'] ?? ''); ?>">
         </div>
