--- a/BCS-MVC/Views/edit_student_profile.phtml
+++ b/BCS-MVC/Views/edit_student_profile.phtml
@@ -45,7 +45,7 @@
 
         <!-- Allow to cancel or confirm edit-->
         <a href="student_profile.php" class="btn btn-secondary">Cancel</a>
-        <button type="submit" class="btn btn-primary" name="update_student_profile">Save Changes</button>
+        <button value= "1" type="submit" class="btn btn-primary" name="update_student_profile">Save Changes</button>
     </form>
 
 <?php require('template/footer.phtml'); ?>
