--- a/BCS-MVC/Views/template/header.phtml
+++ b/BCS-MVC/Views/template/header.phtml
@@ -58,6 +58,9 @@ $user_email = $_SESSION['email'] ?? '';
                     <li class="nav-item">
                         <a class="nav-link" href="add_post.php">Create Post</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="employer_profile.php">My Profile</a>
+                    </li>
                 <?php endif; ?>
                 <?php if ($is_logged_in): ?>
                     <li class="nav-item">
