--- a/BCS-MVC/Views/studentListings.phtml
+++ b/BCS-MVC/Views/studentListings.phtml
@@ -26,10 +26,10 @@
                 <label>
                     <select class="form-select" name="salary">
                         <option value="none" disabled selected>SALARY</option>
-                        <option value="20000" name="salary_option_1">£20000</option>
-                        <option value="30000" name="salary_option_2">£30000</option>
-                        <option value="40000" name="salary_option_2">£40000</option>
-                        <option value="50000" name="salary_option_2">£50000</option>
+                        <option value="20000" name="salary_option_1">+£20000</option>
+                        <option value="30000" name="salary_option_2">+£30000</option>
+                        <option value="40000" name="salary_option_2">+£40000</option>
+                        <option value="50000" name="salary_option_2">+£50000</option>
                         <option value="60000" name="salary_option_2">+£60000</option>
                     </select>
                 </label>
