--- a/BCS-MVC/Views/login.phtml
+++ b/BCS-MVC/Views/login.phtml
@@ -48,6 +48,7 @@
                 </form>
                 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
                 <p class="text-center">New user? <a href="register.php">Create account</a></p>
+                <p class="text-center">Forgot Password? <a href="forgotPassword.php">Forgot Password</a></p>
 
             <?php
             endif;
