--- a/BCS-MVC/Views/template/header.phtml
+++ b/BCS-MVC/Views/template/header.phtml
@@ -61,6 +61,11 @@ $user_email = $_SESSION['email'] ?? '';
                         <a class="nav-link" href="employer_profile.php">My Profile</a>
                     </li>
                 <?php endif; ?>
+                <?php if ($is_logged_in && $user_role === 'admin'): ?>
+                    <li class="nav-item">
+                        <a class="nav-link" href="admin_page.php">users data</a>
+                    </li>
+                <?php endif; ?>
                 <?php if ($is_logged_in): ?>
                     <li class="nav-item">
                         <a class="nav-link" href="logout.php">Logout (<?php echo $_SESSION['name']; ?>)</a>
